# metadata-quality-stack

./: .env.example  .gitignore  LICENSE  README.es.md  README.md  asset-manifest.json  docker-compose.yml  index.html  mqa-config.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-api.yml  docker-frontend.yml
data/: access_rights.jsonl
docker/: Dockerfile.api  Dockerfile.frontend
docker/scripts/: api_entrypoint.sh  frontend_entrypoint.sh  manage.sh
docs/: user_guide.md
docs/vocabularies/: access_rights.csv  file_types.csv  licenses.csv  media_types.csv  non_proprietary.csv
locale/: mqa.pot
locales/en/: translation.json
locales/es/: translation.json
nginx/: Dockerfile
nginx/setup/: default.conf.template  metadata-quality-stack_local.crt  metadata-quality-stack_local.key
react-app/: .env.production  .eslintrc.js  README.md  package-lock.json  package.json
react-app/public/: index.html
react-app/src/: App.css  App.tsx  index.css  index.tsx
scripts/: vocabs_csv2jsonl.py
src/api/: config.py  converters.py  helpers.py  main.py  models.py  shacl_updater.py  validators.py
src/frontend/: app.py  config.py  dashboard.py  i18n.py  visualizations.py
src/frontend-v2/: README.md  package.json
src/tests/: conftest.py  test_api.py  test_tinydb_repo.py
static/: index.html  test-rdf-xml.rdf  test-turtle.ttl
static/css/: main.0811584e.css  main.0811584e.css.map  main.0d9ba075.css  main.0d9ba075.css.map  main.1463eb5b.css  main.1463eb5b.css.map  main.16d49dcf.css  main.16d49dcf.css.map  main.1762661a.css  (+16 more)
(+153 files in other folders)
