[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-quality-tool"
version = "0.1.0"
description = "Herramienta para analizar la calidad de metadatos de datos abiertos"
authors = [
    {name = "NEORIS", email = "info@neoris.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "rdflib>=6.3.2",
    "pyshacl>=0.20.0",
    "sparqlwrapper>=2.0.0",
    "tinydb>=4.7.1",
    "slowapi>=0.1.7",
    "streamlit>=1.22.0",
    "matplotlib>=3.7.1",
    "plotly>=5.14.1",
    "pydantic>=1.10.7",
    "python-multipart>=0.0.6",
    "aiofiles>=23.1.0",
    "pytest>=7.3.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "pylint>=2.17.3",
    "flake8>=6.0.0",
    "mypy>=1.2.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
